--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ workflows:
   # Name the workflow "Welcome"
   Welcome:
     # Run the welcome/run job in its own container
-    jobs: 
-      - welcome/run
-     build:
-       macos:
-        xcode: 11.3.0
+jobs:
+  build:
+    macos:
+      xcode: "11.3.0"
+    resource_class: large
