--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ workflows:
   Welcome:
     # Run the welcome/run job in its own container
 jobs:
+  - welcome/run
   build:
     macos:
-      xcode: "11.3.0"
     resource_class: large
