--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,13 @@
 version: 2.1 
 
 # Use a package of configuration called an orb, see https://circleci.com/docs/2.0/orb-intro/  
-orbs: 
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.3.1 
+orbs:
+  win: circleci/windows@2.3.0
 
-# Orchestrate or schedule a set of jobs, see https://circleci.com/docs/2.0/workflows/ 
-workflows: 
-  # Name the workflow "Welcome"
-  Welcome:
-    # Run the welcome/run job in its own container
 jobs:
-  - welcome/run
   build:
-    macos:
-    resource_class: large
+    executor:
+      name: win/default
+      size: "medium" # can be "medium", "large", "xlarge", "2xlarge"
+    steps:
+      - run: Write-Host 'Hello, Windows'
