--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,19 @@ jobs:
   build:
     executor:
       name: win/default
-      size: "xlarge" # can be "medium", "large", "xlarge", "2xlarge"
+      size: "medium" # can be "medium", "large", "xlarge", "2xlarge"
     steps:
       - run: Write-Host 'Hello, Windows'
+  test:
+    executor:
+      name: win/default
+      size: "medium" # can be "medium", "large", "xlarge", "2xlarge"
+    steps:
+      - run: Write-Host 'Hello, Windows'
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
